fix hover sidebar

--- a/index.html
+++ b/index.html
@@ -101,25 +101,25 @@
         <aside id="side_bar" class="side_bar_lg">
             <div class="container-fluid h-100 d-flex flex-column">
                 <!-- CONTAINER FLUID LG -->
-                <div class="d-flex flex-column align-items-start gap-4 mt-4">
+                <div class="d-flex flex-column align-items-start gap-2 mt-4">
                     <!-- ICONA HOME -->
-                    <div class="d-flex align-items-center gap-3">
-                        <a class="text-light text-decoration-none" href="#"><span class="icon_side"><i class="fa-solid fa-house fs-5"></i></span><span class="ms-2 fw-bold fs-6">Home</span></a>
+                    <div class="d-flex align-items-center">
+                        <a class="size text-light text-decoration-none p-2" href="#"><span class="icon_side"><i class="fa-solid fa-house fs-5"></i></span><span class="ms-2 fw-bold fs-6">Home</span></a>
                     </div>
                     <!-- ICONA STATS -->
-                    <div class="d-flex align-items-center gap-3">
-                        <a class="text-light text-decoration-none" href="#"><span class="icon_side"><i class="fa-solid fa-chart-simple fs-4"></i></span><span class="ms-2 fw-bold fs-6">Stats</span></a>
+                    <div class="d-flex align-items-center">
+                        <a class="size text-light text-decoration-none p-2" href="#"><span class="icon_side"><i class="fa-solid fa-chart-simple fs-4"></i></span><span class="ms-2 fw-bold fs-6">Stats</span></a>
                     </div>
                     <!-- ICONA SIGNALS -->
-                    <div class="d-flex align-items-center gap-3">
-                        <a class="text-light text-decoration-none" href="#"><span class="icon_side"><i class="fa-solid fa-signal fs-5"></i></span><span class="ms-2 fw-bold fs-6">Signals</span></a>
+                    <div class="d-flex align-items-center">
+                        <a class="size text-light text-decoration-none p-2" href="#"><span class="icon_side"><i class="fa-solid fa-signal fs-5"></i></span><span class="ms-2 fw-bold fs-6">Signals</span></a>
                     </div>
 
                 </div>
                 <!-- ICONA ADMIN -->
                 <div class="d-flex justify-content-start mt-auto mb-4">
-                    <div class="d-flex align-items-center gap-3">
-                        <a class="text-light text-decoration-none" href="#"><span class="icon_side"><i class="fa-solid fa-gear fs-5"></i></span><span class="ms-2 fw-bold fs-6">Admin</span></a>
+                    <div class="d-flex align-items-center">
+                        <a class="size text-light text-decoration-none p-2" href="#"><span class="icon_side"><i class="fa-solid fa-gear fs-5"></i></span><span class="ms-2 fw-bold fs-6">Admin</span></a>
                     </div>
                 </div>
             </div>
